force-app/main/default/objects/FEC_Decision_Cell__c/FEC_Decision_Cell__c.object-meta.xml
<CustomObject>
    <label>Decision Cell</label>


    <nameField>
        <displayFormat>CELL-{000000}</displayFormat>
        <label>Cell Number</label>
        <type>AutoNumber</type>
    </nameField>

    <pluralLabel>Decision Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>