force-app/main/default/objects/FEC_Decision_Cell__c/fields/FEC_Decision_Column__c.field-meta.xml
<CustomField>
    <fullName>FEC_Decision_Column__c</fullName>
    <label>Decision Column</label>
    <referenceTo>FEC_Decision_Column__c</referenceTo>
    <relationshipLabel>Decision Cells</relationshipLabel>
    <relationshipName>Decision_Cells</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>