force-app/main/default/objects/FEC_Decision_Cell__c/fields/FEC_Decision_Row__c.field-meta.xml
<CustomField>
    <fullName>FEC_Decision_Row__c</fullName>
    <label>Decision Row</label>
    <referenceTo>FEC_Decision_Row__c</referenceTo>
    <relationshipLabel>Decision Cells</relationshipLabel>
    <relationshipName>Decision_Cells</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>